# bezier_subdivision

./: CMakeLists.txt  README.md
models/: car.bez  cube.off  heart.bez  readme.txt  simple.bez  teacup.bez  teacup.off  teapot.bez
src/: CMakeLists.txt
src/bezier/: BezierViewer.cpp  BezierViewer.h  CMakeLists.txt  Main_Bezier.cpp  bezier_patch.cpp  bezier_patch.h  bezier_surface.cpp  bezier_surface.h
src/subdivision/: CMakeLists.txt  Main_Subdivision.cpp  Mesh.cpp  Mesh.h  Subdivision_Viewer.cpp  Subdivision_Viewer.h
